objects/EXPRN__Experian_Address_Information__c.object
<CustomObject>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_2_City__c</fullName>
        <label>Account Business Owner 2 City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_2_Country__c</fullName>
        <label>Account Business Owner 2 Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_2_First_Name__c</fullName>
        <label>Account Business Owner 2 First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_2_Last_Name__c</fullName>
        <label>Account Business Owner 2 Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_2_Middle_Name__c</fullName>
        <label>Account Business Owner 2 Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_2_Object_Name__c</fullName>
        <label>Account Business Owner 2 Object Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_2_SSN__c</fullName>
        <label>Account Business Owner 2 SSN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_2_Search_Flag__c</fullName>
        <label>Account Business Owner 2 Search Flag</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_2_State__c</fullName>
        <label>Account Business Owner 2 State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_2_Street_Address__c</fullName>
        <label>Account Business Owner 2 Street Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_2_Zip__c</fullName>
        <label>Account Business Owner 2 Zip</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_City__c</fullName>
        <label>Account Business Owner City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_Country__c</fullName>
        <label>Account Business Owner Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_First_Name__c</fullName>
        <label>Account Business Owner First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_Last_Name__c</fullName>
        <label>Account Business Owner Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_Middle_Name__c</fullName>
        <label>Account Business Owner Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_Object_Name__c</fullName>
        <label>Account Business Owner Object Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_SSN__c</fullName>
        <description>Account Business Owner SSN</description>
        <label>Account Business Owner SSN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_Search_Flag__c</fullName>
        <label>Account Business Owner Search Flag</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_State__c</fullName>
        <label>Account Business Owner State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_Street_Address__c</fullName>
        <label>Account Business Owner Street Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Business_Owner_Zip__c</fullName>
        <label>Account Business Owner Zip</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Owner_2_Search_Lookup_Name__c</fullName>
        <label>Account Owner 2 Search Lookup Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Owner_Search_Lookup_Name__c</fullName>
        <label>Account Owner Search Lookup Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__City__c</fullName>
        <label>Lead City</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Company_Name__c</fullName>
        <label>Lead Company Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Country__c</fullName>
        <label>Lead Country</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_BIQ_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exp BIQ Configuration</label>
        <referenceTo>EXPRN__BIQ_Configuration__c</referenceTo>
        <relationshipName>Experian_Address_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Lead_Owner_2_City__c</fullName>
        <label>Lead Owner 2 City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Lead_Owner_2_Country__c</fullName>
        <label>Lead Owner 2 Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Lead_Owner_2_First_Name__c</fullName>
        <label>Lead Owner 2 First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Lead_Owner_2_Last_Name__c</fullName>
        <label>Lead Owner 2 Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Lead_Owner_2_Middle_Name__c</fullName>
        <label>Lead Owner 2 Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Lead_Owner_2_Object_Name__c</fullName>
        <label>Lead Owner 2 Object Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Lead_Owner_2_SSN__c</fullName>
        <label>Lead Owner 2 SSN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Lead_Owner_2_Search_Flag__c</fullName>
        <label>Lead Owner 2 Search Flag</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Lead_Owner_2_Search_Lookup_Name__c</fullName>
        <label>Lead Owner 2 Search Lookup Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Lead_Owner_2_State__c</fullName>
        <label>Lead Owner 2 State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Lead_Owner_2_Street_Address__c</fullName>
        <label>Lead Owner 2 Street Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Lead_Owner_2_Zip__c</fullName>
        <label>Lead Owner 2 Zip</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Lead_Owner_Object_Name__c</fullName>
        <label>Lead Owner Object Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Lead_Owner_SSN__c</fullName>
        <label>Lead Owner SSN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Lead_Owner_Search_Lookup_Name__c</fullName>
        <label>Lead Owner Search Lookup Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Lead_Search_Lookup_Name__c</fullName>
        <label>Lead Search Lookup Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Lead_Search_Object_Name__c</fullName>
        <label>Lead Search Object Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_2_City__c</fullName>
        <label>Opp Business Owner 2 City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_2_Country__c</fullName>
        <label>Opp Business Owner 2 Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_2_First_Name__c</fullName>
        <label>Opp Business Owner 2 First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_2_Last_Name__c</fullName>
        <label>Opp Business Owner 2 Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_2_Middle_Name__c</fullName>
        <label>Opp Business Owner 2 Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_2_Object_Name__c</fullName>
        <label>Opp Business Owner 2 Object Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_2_SSN__c</fullName>
        <label>Opp Business Owner 2 SSN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_2_Search_Flag__c</fullName>
        <label>Opp Business Owner 2 Search Flag</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_2_Search_Lookup_Name__c</fullName>
        <label>Opp Business Owner 2 Search Lookup Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_2_State__c</fullName>
        <label>Opp Business Owner 2 State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_2_Street_Address__c</fullName>
        <label>Opp Business Owner 2 Street Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_2_Zip__c</fullName>
        <label>Opp Business Owner 2 Zip</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_City__c</fullName>
        <label>Opp Business Owner City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_Country__c</fullName>
        <label>Opp Business Owner Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_First_Name__c</fullName>
        <label>Opp Business Owner First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_Last_Name__c</fullName>
        <label>Opp Business Owner Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_Middle_Name__c</fullName>
        <label>Opp Business Owner Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_Object_Name__c</fullName>
        <label>Opp Business Owner Object Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_SSN__c</fullName>
        <label>Opp Business Owner SSN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_Search_Flag__c</fullName>
        <label>Opp Business Owner Search Flag</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_State__c</fullName>
        <label>Opp Business Owner State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_Street_Address__c</fullName>
        <label>Opp Business Owner Street Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Business_Owner_Zip__c</fullName>
        <label>Opp Business Owner Zip</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_City__c</fullName>
        <label>Opp City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Country__c</fullName>
        <label>Opp Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Owner_Search_Lookup_Name__c</fullName>
        <label>Opp Owner Search Lookup Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Search_Lookup_Name__c</fullName>
        <label>Opp Search Lookup Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Search_Object_Name__c</fullName>
        <label>Opp Search Object Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_State__c</fullName>
        <label>Opp State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Street_Address__c</fullName>
        <label>Opp Street Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Opp_Zip__c</fullName>
        <inlineHelpText>Example: For Account  - BillingPostalCode</inlineHelpText>
        <label>Opp Zip</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Owner_City__c</fullName>
        <label>Lead Owner City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Owner_Country__c</fullName>
        <label>Lead Owner Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Owner_First_Name__c</fullName>
        <label>Lead Owner First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Owner_Last_Name__c</fullName>
        <label>Lead Owner Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Owner_Middle_Name__c</fullName>
        <label>Lead Owner Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Owner_Search_Flag__c</fullName>
        <description>Field to decide which owner record need to be selected</description>
        <inlineHelpText>Example : State__c = &apos;AK&apos;</inlineHelpText>
        <label>Lead Owner Search Flag</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Owner_State__c</fullName>
        <label>Lead Owner State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Owner_Street_Address__c</fullName>
        <label>Lead Owner Street Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Owner_Zip__c</fullName>
        <label>Lead Owner Zip</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__State__c</fullName>
        <label>Lead State</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Street_Address__c</fullName>
        <label>Lead Street Address</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Zip__c</fullName>
        <label>Lead Zip</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Experian Owner and Address Information</label>
    <listViews>
        <fullName>EXPRN__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EAI-{0000}</displayFormat>
        <label>Experian Address Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experian Owner and Address Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EXPRN__Name_Validation</fullName>
        <active>false</active>
        <description>To validate the Name field of the object</description>
        <errorConditionFormula>UPPER( Name )  != &apos;LEAD&apos;</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Invalid Name</errorMessage>
    </validationRules>
</CustomObject>